; ModuleID = '/home/carl/AnghaBench/linux/security/apparmor/extr_lsm.c_param_set_aalockpolicy.c'
source_filename = "/home/carl/AnghaBench/linux/security/apparmor/extr_lsm.c_param_set_aalockpolicy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kernel_param = type { i32 }

@apparmor_enabled = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@apparmor_initialized = common dso_local global i64 0, align 8
@EPERM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.kernel_param*)* @param_set_aalockpolicy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @param_set_aalockpolicy(i8* %0, %struct.kernel_param* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca %struct.kernel_param*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.kernel_param* %1, %struct.kernel_param** %5, align 8
  %6 = load i32, i32* @apparmor_enabled, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %11, label %8

8:                                                ; preds = %2
  %9 = load i32, i32* @EINVAL, align 4
  %10 = sub nsw i32 0, %9
  store i32 %10, i32* %3, align 4
  br label %24

11:                                               ; preds = %2
  %12 = load i64, i64* @apparmor_initialized, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %20

14:                                               ; preds = %11
  %15 = call i32 @policy_admin_capable(i32* null)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %20, label %17

17:                                               ; preds = %14
  %18 = load i32, i32* @EPERM, align 4
  %19 = sub nsw i32 0, %18
  store i32 %19, i32* %3, align 4
  br label %24

20:                                               ; preds = %14, %11
  %21 = load i8*, i8** %4, align 8
  %22 = load %struct.kernel_param*, %struct.kernel_param** %5, align 8
  %23 = call i32 @param_set_bool(i8* %21, %struct.kernel_param* %22)
  store i32 %23, i32* %3, align 4
  br label %24

24:                                               ; preds = %20, %17, %8
  %25 = load i32, i32* %3, align 4
  ret i32 %25
}

declare dso_local i32 @policy_admin_capable(i32*) #1

declare dso_local i32 @param_set_bool(i8*, %struct.kernel_param*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
